--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -271,9 +271,12 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    @include breakpoint(medium) {
+      height: 200vh;
+    }
     .skill-web {
       position: absolute;
-      top: 50%;
+      top: 54%;
       left: 50%;
       transform: translate(-50%, -50%);
       @include breakpoint(medium) {
