--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -524,12 +524,14 @@ body {
         opacity: 0;
       }
       > .row > .column {
-        margin-bottom: 2rem;
+        margin-bottom: .5rem;
+        padding-left: .25rem;
+        padding-right: .25rem;
       }
     }
     .sample {
       position: relative;
-      height: 300px;
+      height: 500px;
       overflow: hidden;
       background: {
         size: cover;
