add linkedin logo

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -72,6 +72,21 @@ header {
             }
           }
         }
+        &.social {
+          margin-top: 1rem;
+          a {
+            display: inline-block;
+            max-width: 32px;
+            max-height: 32px;
+            transition: opacity .1s linear;
+            &::after {
+              display: none;
+            }
+            &:hover {
+              opacity: .7;
+            }
+          }
+        }
       }
     }
   }
